--- a/HomeLedApp/Strings/AppResources.de.resx
+++ b/HomeLedApp/Strings/AppResources.de.resx
@@ -219,7 +219,7 @@ Der Farbton bezeichnet in der Farbenlehre die Eigenschaft, nach der man Farbempf
     <value />
   </data>
   <data name="Randomized" xml:space="preserve">
-    <value>Zufällig</value>
+    <value>Verstörend</value>
   </data>
   <data name="RenameDevice_Info" xml:space="preserve">
     <value>Erstelle hier einen neuen Namen für das Gerät. Maximal 16 Zeichen. Unter umständen wird das Gerät erst nach einem neustart der LED angezeigt. Das Gerät ist möglicherweise noch unter dem alten Namen sichtbar, bis die App neu gestartet wurde.</value>
